--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -41,12 +41,19 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         
-        <!-- H2 Database -->
+        <!-- MySQL Database -->
         <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        
+        <!-- H2 Database - Commented out for MySQL -->
+        <!-- <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
-        </dependency>
+        </dependency> -->
         
         <!-- JWT -->
         <dependency>
