--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -81,6 +81,12 @@
             <optional>true</optional>
         </dependency>
         
+        <!-- Bean Validation (Jakarta Validation) -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+        
         <!-- Spring Boot DevTools -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
