--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -41,12 +41,13 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         
-        <!-- MySQL Database -->
+        <!-- Postgre SQL Database -->
         <dependency>
-            <groupId>com.mysql</groupId>
-            <artifactId>mysql-connector-j</artifactId>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         
         <!-- H2 Database - Commented out for MySQL -->
         <!-- <dependency>
