--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -41,12 +41,20 @@
             <artifactId>spring-boot-starter-security</artifactId>
         </dependency>
         
-        <!-- Postgre SQL Database -->
+        <!-- PostgreSQL Database -->
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
+        
+        <!-- mongoDB Database -->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
 
         
         <!-- H2 Database - Commented out for MySQL -->
